--- a/aula-ts-01/package.json
+++ b/aula-ts-01/package.json
@@ -51,8 +51,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node index.js",
-    "dev": "nodemon index.ts"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
